[package]
name = "queue"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
parking_lot = { version = "0.12.1", features = ["hardware-lock-elision"] }
rayon = { version = "1.7.0" }
chrono = { version = "0.4.30" }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.106" }
